@@ -1,3 +1,7 @@
+2007-05-18  Tim Waugh  <twaugh@redhat.com>
+
+	* examples/cupstree.py: New file.
+
 2007-05-17  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsmodule.c (cups_require): New method.
